@@ -1,4 +1,13 @@
 === 0.4 ===
+2011-07-19  Aki Sasaki  <aki@mozilla.com>
+* TODO: Removed file
+
+* mozharness/base/script.py (query_abs_dirs):
+    put upload_dir in work_dir/
+    keep logs under base_work_dir/
+    TODO: copy_to_upload_dir with file rotation, copy logs there
+    This will let me clobber work_dir without blowing away logs
+
 2011-07-18  Aki Sasaki  <aki@mozilla.com>
 * mozharness/scripts/mozmill_updates.py:
     Added --create-virtualenv action. Not sure if this is useful or needed, but I was asked why I didn't, so here it is.
